--- a/udemy_proyect/udemy_proyect/pubspec.yaml
+++ b/udemy_proyect/udemy_proyect/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.4 <4.0.0'
+  sdk: '>=3.3.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -19,6 +19,12 @@ dependencies:
   ionicons: ^0.2.2
   shared_preferences: ^2.2.3
   video_player: ^2.8.6
+  line_awesome_flutter: ^1.0.1
+  flutter_screenutil:  ^5.9.0
+  email_validator: ^2.0.1
+  string_validator: ^0.3.0
+  image_picker: ^1.1.0 
+  path_provider: ^2.0.4
 
 dev_dependencies:
   flutter_test:
