--- a/udemy_proyect/udemy_proyect/pubspec.yaml
+++ b/udemy_proyect/udemy_proyect/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fl_chart: ^0.36.0 
   flutter_localizations:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
